recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: not found: value levels
	if(levels==0){
           ^Sierpinski:10: error: not found: value levels
		sierpinski(levels-1,length/2)
                           ^