recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
	if(levels==0){
		avance(length)
		droite(120)
		avance(length)
		droite(120)
		avance(length)
		droite(120)
	}else{
		sierpinski(levels-1,length/2)
	}
}
